4 update setup info (#6)
* chore: Update gitignore rules for test fixtures

* chore: Update reqs for gtfs_kit & r5py

* feat: Script to create fixtures & test data directory

* feat: Environment setup script

* docs: Add instructions to contributing guide

* docs: Add link to code of conduct & contributing guide to root readme

* chore: Running pre-commit checks

* refactor: Make success message more prominent

* refactor: Rollback pydoctyle ignore d100 & adjust multistring comment position

* feat: set black line-length to match PEP8

* docs: updated contributing java installation on ARM macs

* docs: updated contributing set-up check steps

* docs: tidied set-up expectations details

* chore: set flake8 line length to match PEP8

---------

Co-authored-by: Ethan Moss <ethan.moss@ons.gov.uk>